--- a/package.json
+++ b/package.json
@@ -35,11 +35,6 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0",
-    "pg": "^8.9.0",
-    "pg-hstore": "^2.3.4",
-    "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.28.0",
-    "sequelize-typescript": "^2.1.5"
+    "jsonwebtoken": "^9.0.0"
   }
 }
