--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
     "@types/node": "^18.13.0",
     "@types/validator": "^13.7.12",
     "nodemon": "^2.0.20",
-    "sequelize-cli": "^6.6.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@prisma/client": "^4.10.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.9.0",
+    "prisma": "^4.10.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.12"
   }
 }
