--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^18.13.0",
     "@types/validator": "^13.7.12",
     "nodemon": "^2.0.20",
+    "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
@@ -37,8 +38,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
-    "prisma": "^4.10.1",
-    "reflect-metadata": "^0.1.13",
-    "typeorm": "^0.3.12"
+    "reflect-metadata": "^0.1.13"
   }
 }
