--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "full HRMS portal API in expressjs with typescript",
   "main": "app.js",
   "prisma": {
-    "seed": "ts-node src/prisma/seeder/seed.ts"
+    "seed": "ts-node src/prisma/seeder/seed.ts",
+    "schema": "./src/prisma/schema.prisma"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
+    "@types/nodemailer": "^6.4.7",
     "@types/validator": "^13.7.12",
     "nodemon": "^2.0.20",
     "prisma": "^4.10.1",
@@ -40,6 +42,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13"
   }
