--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "nodemailer": "^6.9.1",
