--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
   "homepage": "https://github.com/Neel-Wappnet/HRMS-portal#readme",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
     "@types/nodemailer": "^6.4.7",
     "@types/validator": "^13.7.12",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "prisma": "^4.10.1",
     "ts-node": "^10.9.1",
