--- a/package.json
+++ b/package.json
@@ -40,11 +40,15 @@
     "@prisma/client": "^4.10.1",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "bcrypt": "^5.1.0",
+    "cloudinary": "^1.34.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13"
